--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,10 @@ body {
   color: var(--text-color);
   background-color: var(--bg-color);
   }
+  .icon{
+    fill: rgb(6, 6, 6);
+    stroke:rgb(6, 6, 6) ;
+}
 /* ====================== CONTAINER ================================*/
 .container { 
   width: 100%;
@@ -82,6 +86,11 @@ body {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+.is-hidden{
+  visibility: hidden;
+  opacity:0;
+  pointer-events:none;
 }
 /* ====================== HEADER =====================================*/
 .header{
@@ -139,10 +148,30 @@ body {
   font-weight: 500;
   letter-spacing: 0.32px;
   color: var(--text-color-secindary);
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav .link:hover,.link:focus{
   color:var(--hover-color);
 }
+.nav .link.current{
+  position: relative;
+  color: var(--hover-color);
+}
+.nav .link.current::after{
+    content: "";
+    position: absolute;
+    left: 0%;
+    bottom: 0%;
+    display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--hover-color);
+}
+
 .address .list{
   display: flex;
   justify-content: space-between;
@@ -158,6 +187,10 @@ body {
   line-height: 1.5; 
   letter-spacing: 0.32px;
   color: var(--text-color);
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address .link:hover,.link:focus{
   color:var(--hover-color);
@@ -168,6 +201,8 @@ body {
   padding-top: 188px;
   padding-bottom: 188px;
   background-color: var(--hero-color);
+  background-image:linear-gradient(rgba(46, 47, 66, 0.7), 
+rgba(46, 47, 66, 0.7)),url(../images/hero.jpg);
 }
 .hero .title{
   max-width: 496px;
@@ -186,7 +221,7 @@ body {
   margin-top: 48px;
   padding: 16px 32px;
   min-width: 169px;
-  border: none;
+  border: transparent;
   border-radius: 4px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 
@@ -198,9 +233,14 @@ body {
   
   color: var( --bg-color);
   background-color: var(--akcent-color);
-}
+
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+ }
 .hero .button:hover, .button:focus{
    background-color:var(--hover-color);
+   border: transparent;
 }
 
 /* ====================== ADVANTAGES ==========================================*/
@@ -217,6 +257,16 @@ body {
 }
 .advantages .list .item{
   flex-basis: calc((100% - 3 * 24px) / 4)
+}
+.advantages .wripper{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.advantages .icon{
+  margin-top: 24px;
+  margin-bottom: 24px;
+  fill: black;
 }
 .advantages .title{
   margin-bottom: 8px;
@@ -309,14 +359,68 @@ body {
   color: var(--text-color-secindary);
 }
 .team .position{
+   margin-bottom: 8px;
    text-align: center; 
    color: var(--text-color);
+}
+.social-list{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+.social-list .link{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+ }
+/* ====================== CUSTUMERS ==========================================*/
+.customers{
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.customers .title{
+  margin-bottom: 72px;
+
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.11; 
+  letter-spacing: 0.02em;
+  text-align: center;
+  text-transform: capitalize;
+  color: var(--text-color-secindary);
+}
+.customers .list{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+.customers .item{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+
+  padding: 16px 32px;
+  border-radius: 4px;
+  border: 1px solid #8E8F99;
 }
 
 /* ====================== FOOTER ==========================================*/
 .footer{
   padding: 100px 0;
   background-color: var(--footer-color);
+}
+.footer .container{
+  display: flex;
+  justify-content: left;
+  flex-wrap: wrap;
+  gap: 120px;
 }
  .logo-footer{
    display: inline-block;
@@ -343,7 +447,16 @@ body {
   max-width: 264px;
   color:var(--footer-text);
 }
+.social-footer{
 
+}
+.social-footer .title{
+  margin-bottom: 16px;
+  font-weight: 500;
+  line-height:1.5; 
+  letter-spacing: 0.32px;
+  color: var(--bg-color);
+}
 /* ====================== PORTFOLIO ==========================================*/
 .cards{
   padding-top: 96px;
@@ -369,13 +482,18 @@ body {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
+
   color: var(--akcent-color);
   background-color: var(--bg-color-secindary);
+
+  transition-property: color,background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
  .button:hover, .button:focus{
   color: var(--bg-color);
   background-color: #404BBF;
-   border:1px solid transparent;
+  border:1px solid transparent;
 }
 /* ====================== CARDS ==========================================*/
 .list{
@@ -387,6 +505,30 @@ body {
 }
 .card{
   width: calc((100% - 48px) / 3);
+}
+.overlay-wripper{
+  position: relative;
+  overflow: hidden;
+}
+.overlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 40px 32px;
+
+  text-align: center;
+  color: var(--bg-color-secindary);
+  background-color: var(--akcent-color);
+
+  transform: translateY(100%);
+  transition-property: translateY();
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+ .card:hover .overlay{
+  transform: translateY(0%);
 }
 .card-wripper{
   padding: 32px 16px;
@@ -409,4 +551,36 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--text-color);
+}
+
+/* ====================== BACKDROP ==========================================*/
+.backdrop{
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  background:  rgba(46, 47, 66, 0.40);
+}
+
+/* ====================== MODAL ==========================================*/
+.modal{
+  position: absolute;
+  top:80px;
+  left:50%;
+  transform: translate(-50%,0);
+  width: 408px;
+  height: 584px;
+  border-radius: 4px;
+  background-color:  #FCFCFC;
+  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+}
+.close-button{
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  /* padding: 0;
+  background-color: transparent;
+  border: none; */
 }
