--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,8 @@ button{
   --hero-color:#2E2F42;
   --footer-color:#2E2F42;
   --footer-text:#F4F4FD;
+
+  --icon-color:#8e8f99;
 }
 
 body {
@@ -63,7 +65,7 @@ body {
   color: var(--text-color);
   background-color: var(--bg-color);
   }
-  
+
   .icon{
     fill: rgb(6, 6, 6);
     stroke:rgb(6, 6, 6) ;
@@ -89,13 +91,14 @@ body {
   overflow: hidden;
 }
 .is-hidden{
-  visibility: hidden;
   opacity:0;
+  visibility: hidden;
   pointer-events:none;
 }
 /* ====================== HEADER =====================================*/
 .header{
   border-bottom: 1px solid  #E7E9FC;
+  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 .header .container{
   display: flex;
@@ -165,7 +168,7 @@ body {
     content: "";
     position: absolute;
     left: 0%;
-    bottom: 0%;
+    bottom: -1px;
     display: block;
     width: 100%;
     height: 4px;
@@ -199,11 +202,15 @@ body {
  
 /* ====================== HERO ==========================================*/
 .hero{
+  max-width: 1440px;
   padding-top: 188px;
   padding-bottom: 188px;
   background-color: var(--hero-color);
   background-image:linear-gradient(rgba(46, 47, 66, 0.7), 
 rgba(46, 47, 66, 0.7)),url(../images/hero.jpg);
+  background-repeat: no-repeat; 
+  background-position: center;
+  background-size: cover;
 }
 .hero .title{
   max-width: 496px;
@@ -263,6 +270,10 @@ rgba(46, 47, 66, 0.7)),url(../images/hero.jpg);
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 8px;
+
+  background-color: #f4f4fd;
+  border-radius: 4px;
 }
 .advantages .icon{
   margin-top: 24px;
@@ -333,7 +344,7 @@ rgba(46, 47, 66, 0.7)),url(../images/hero.jpg);
   flex-wrap: wrap;
   gap: 24px;
 }
-.team .item{
+.team .list .item{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -376,6 +387,23 @@ rgba(46, 47, 66, 0.7)),url(../images/hero.jpg);
   justify-content: center;
   align-items: center;
   flex-wrap: nowrap;
+
+  width: 40px;
+  height: 40px;
+
+  background-color:var(--akcent-color);
+  border-radius:50%;
+
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+ }
+ .social-list .link:hover, .social-list .link:focus{
+  background-color:var(--hover-color)
+ }
+
+ .social-icon{
+  fill: var(--hover-color)
  }
 /* ====================== CUSTUMERS ==========================================*/
 .customers{
@@ -392,7 +420,7 @@ rgba(46, 47, 66, 0.7)),url(../images/hero.jpg);
   letter-spacing: 0.02em;
   text-align: center;
   text-transform: capitalize;
-  color: var(--text-color-secindary);
+  color: var(--hero-color);
 }
 .customers .list{
   display: flex;
@@ -407,11 +435,33 @@ rgba(46, 47, 66, 0.7)),url(../images/hero.jpg);
   align-items: center;
   flex-wrap: wrap;
 
+  width: calc((100% - 120px) / 6);
+  height: 88px;
+
   padding: 16px 32px;
   border-radius: 4px;
-  border: 1px solid #8E8F99;
+  border: 1px solid var(--icon-color);
+}
+.customers .item .link{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 100%;
+  height: 100%;
+  border: 1px solid var(--icon-color);
+  border-radius:4px;
+
+  color:var(--icon-color);
+}
+.customers .item .link:hover, .customers .item .link:focus{
+  border-color:var(--hover-color);
+  color:var(--hover-color)
 }
 
+ .customers .item .link .icon{
+  fill:currentColor;
+}
 /* ====================== FOOTER ==========================================*/
 .footer{
   padding: 100px 0;
@@ -420,8 +470,11 @@ rgba(46, 47, 66, 0.7)),url(../images/hero.jpg);
 .footer .container{
   display: flex;
   justify-content: left;
+  align-items: baseline;
   flex-wrap: wrap;
-  gap: 120px;
+}
+.footer .wripper{
+  margin-right: 120px;
 }
  .logo-footer{
    display: inline-block;
@@ -458,6 +511,36 @@ rgba(46, 47, 66, 0.7)),url(../images/hero.jpg);
   letter-spacing: 0.32px;
   color: var(--bg-color);
 }
+.social-footer .social-list{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 16px;
+}
+.social-footer .social-list .link{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+
+  width: 40px;
+  height: 40px;
+
+  background-color:var(--akcent-color);
+  border-radius:50%;
+
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+ }
+ .social-footer .social-list .link:hover, .social-footer .social-list .link:focus{
+  background-color:#31d0aa;
+ }
+.social-footer .icon {
+  fill:var(--footer-text)
+}
+
 /* ====================== PORTFOLIO ==========================================*/
 .cards{
   padding-top: 96px;
@@ -487,7 +570,7 @@ rgba(46, 47, 66, 0.7)),url(../images/hero.jpg);
   color: var(--akcent-color);
   background-color: var(--bg-color-secindary);
 
-  transition-property: color,background-color;
+  transition-property: color,background-color,box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -495,6 +578,7 @@ rgba(46, 47, 66, 0.7)),url(../images/hero.jpg);
   color: var(--bg-color);
   background-color: #404BBF;
   border:1px solid transparent;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 /* ====================== CARDS ==========================================*/
 .list{
@@ -507,10 +591,22 @@ rgba(46, 47, 66, 0.7)),url(../images/hero.jpg);
 .card{
   width: calc((100% - 48px) / 3);
 }
+.card .link{
+  display: block; 
+  transition-property: box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.card .link:hover, .card .link:focus{
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
 .overlay-wripper{
   position: relative;
   overflow: hidden;
 }
+
 .overlay{
   position: absolute;
   top: 0;
@@ -524,11 +620,11 @@ rgba(46, 47, 66, 0.7)),url(../images/hero.jpg);
   background-color: var(--akcent-color);
 
   transform: translateY(100%);
-  transition-property: translateY();
+  transition-property: transform;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
- .card:hover .overlay{
+ .card:hover .overlay ,.card:focus .overlay{
   transform: translateY(0%);
 }
 .card-wripper{
@@ -563,25 +659,52 @@ rgba(46, 47, 66, 0.7)),url(../images/hero.jpg);
   width: 100%;
   height: 100%;
   background:  rgba(46, 47, 66, 0.40);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* ====================== MODAL ==========================================*/
 .modal{
   position: absolute;
-  top:80px;
+  top:50%;
   left:50%;
-  transform: translate(-50%,0);
+  transform: translate(-50%, -50%) scale(1);
   width: 408px;
-  height: 584px;
+  min-height: 584px;
+
   border-radius: 4px;
   background-color:  #FCFCFC;
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .close-button{
   position: absolute;
   top: 24px;
   right: 24px;
-  /* padding: 0;
-  background-color: transparent;
-  border: none; */
+
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+
+  background-color: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1); 
+  padding: 0;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.close-button:hover, .close-button:focus{
+  background-color:var(--hover-color);
+  border: none;
+}
+
+ .close-button .icon{
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ }
+ .close-button:hover .icon{
+  fill: var(--bg-color)
+ }
