--- a/css/styles.css
+++ b/css/styles.css
@@ -66,10 +66,6 @@ body {
   background-color: var(--bg-color);
   }
 
-  .icon{
-    fill: rgb(6, 6, 6);
-    stroke:rgb(6, 6, 6) ;
-}
 /* ====================== CONTAINER ================================*/
 .container { 
   width: 100%;
@@ -403,7 +399,7 @@ rgba(46, 47, 66, 0.7)),url(../images/hero.jpg);
  }
 
  .social-icon{
-  fill: var(--hover-color)
+  fill: var(--bg-color-secindary)
  }
 /* ====================== CUSTUMERS ==========================================*/
 .customers{
@@ -438,9 +434,9 @@ rgba(46, 47, 66, 0.7)),url(../images/hero.jpg);
   width: calc((100% - 120px) / 6);
   height: 88px;
 
-  padding: 16px 32px;
-  border-radius: 4px;
-  border: 1px solid var(--icon-color);
+  /* padding: 16px 32px; */
+  /* border-radius: 4px; */
+  /* border: 1px solid var(--icon-color); */
 }
 .customers .item .link{
   display: flex;
@@ -453,8 +449,12 @@ rgba(46, 47, 66, 0.7)),url(../images/hero.jpg);
   border-radius:4px;
 
   color:var(--icon-color);
+
+  transition-property: color, border-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.customers .item .link:hover, .customers .item .link:focus{
+.customers  .link:hover, .customers  .link:focus{
   border-color:var(--hover-color);
   color:var(--hover-color)
 }
@@ -501,9 +501,7 @@ rgba(46, 47, 66, 0.7)),url(../images/hero.jpg);
   max-width: 264px;
   color:var(--footer-text);
 }
-.social-footer{
 
-}
 .social-footer .title{
   margin-bottom: 16px;
   font-weight: 500;
@@ -593,9 +591,7 @@ rgba(46, 47, 66, 0.7)),url(../images/hero.jpg);
 }
 .card .link{
   display: block; 
-  transition-property: box-shadow;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .card .link:hover, .card .link:focus{
@@ -703,8 +699,9 @@ rgba(46, 47, 66, 0.7)),url(../images/hero.jpg);
 }
 
  .close-button .icon{
+  fill: var(--hero-color);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
- .close-button:hover .icon{
-  fill: var(--bg-color)
- }
+ .close-button:hover .icon,.close-button:focus .icon{
+  fill: #ffffff;
+ }  
