--- a/css/styles.css
+++ b/css/styles.css
@@ -454,7 +454,7 @@ rgba(46, 47, 66, 0.7)),url(../images/hero.jpg);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.customers  .link:hover, .customers  .link:focus{
+.customers .link:hover, .customers .link:focus{
   border-color:var(--hover-color);
   color:var(--hover-color)
 }
@@ -568,9 +568,7 @@ rgba(46, 47, 66, 0.7)),url(../images/hero.jpg);
   color: var(--akcent-color);
   background-color: var(--bg-color-secindary);
 
-  transition-property: color,background-color,box-shadow;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
  .button:hover, .button:focus{
   color: var(--bg-color);
@@ -591,7 +589,7 @@ rgba(46, 47, 66, 0.7)),url(../images/hero.jpg);
 }
 .card .link{
   display: block; 
-  transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition:box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .card .link:hover, .card .link:focus{
@@ -620,7 +618,7 @@ rgba(46, 47, 66, 0.7)),url(../images/hero.jpg);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
- .card:hover .overlay ,.card:focus .overlay{
+ .card:hover .overlay,.card:focus .overlay{
   transform: translateY(0%);
 }
 .card-wripper{
