--- a/css/styles.css
+++ b/css/styles.css
@@ -433,10 +433,6 @@ rgba(46, 47, 66, 0.7)),url(../images/hero.jpg);
 
   width: calc((100% - 120px) / 6);
   height: 88px;
-
-  /* padding: 16px 32px; */
-  /* border-radius: 4px; */
-  /* border: 1px solid var(--icon-color); */
 }
 .customers .item .link{
   display: flex;
@@ -454,9 +450,13 @@ rgba(46, 47, 66, 0.7)),url(../images/hero.jpg);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.customers .link:hover, .customers .link:focus{
+.customers .link:hover{
   border-color:var(--hover-color);
-  color:var(--hover-color)
+  color:var(--hover-color);
+}
+.customers .link:focus{
+  border-color:var(--hover-color);
+  color:var(--hover-color);
 }
 
  .customers .item .link .icon{
@@ -618,7 +618,10 @@ rgba(46, 47, 66, 0.7)),url(../images/hero.jpg);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
- .card:hover .overlay,.card:focus .overlay{
+ .card:hover .overlay{
+  transform: translateY(0%);
+}
+.card:focus .overlay{
   transform: translateY(0%);
 }
 .card-wripper{
